# FW-RemoteStation

./: .clang-format  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Kconfig  LICENSE  README.md  STM32F30_FLASH.ld  cppcheck.supp  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ci.yml  clang-format.yml  cmake.yml  release.yml
app/: CMakeLists.txt  USB_AUDIO_BRIDGE.md  prj.conf  sample.yaml  sysbuild.conf
app/boards/: native_sim_native_64.conf  native_sim_native_64.overlay  nucleo_u575zi_q.cmake  nucleo_u575zi_q.conf  nucleo_u575zi_q.overlay
app/src/: audio_stream.cpp  audio_stream.h  dfu_mode.cpp  dfu_mode.h  etl_error_handler.cpp  feedback.cpp  feedback.h  main.c  main.cpp  main_usb_audio.cpp  sa818.cpp  uac2_simple.c  usb_audio_bridge.cpp  usb_audio_bridge.h  usb_config.cpp  version_shell.cpp
app/src/audio_bridge/: bridge.cpp  bridge.h  buffer.cpp  buffer.h  config.h  feedback.h  raii.h
app/src/boot_confirm/: boot_confirm_fm.cpp  health_gate.cpp  health_gate.h
app/src/common/: status.h
app/src/sim_audio/: adc_sink.cpp  adc_sink.h  audio_pipeline.cpp  audio_pipeline.h  constants.h  sample_clock.cpp  sample_clock.h  sample_source.h  shell_wav.cpp  sine_source.cpp  sine_source.h  wav_source.cpp  wav_source.h
app/sysbuild/: app.conf  fm_board.conf  mcuboot.conf
boards/oe5xrx/fm_board/: Kconfig  Kconfig.fm_board  USB_CONFIGURATION.md  board.cmake  board.yml  fm_board-common.dtsi  fm_board-pinctrl.dtsi  fm_board.dts  fm_board.yaml  fm_board_defconfig  fm_board_usb_composite.overlay
cmake/: gcc-arm-none-eabi.cmake
docs/: Doxyfile.in  firmware-update.md
docs/superpowers/plans/: 2026-07-01-module-describe-and-typed-command-mapping.md  2026-07-02-sa818-full-capability-and-module-platform.md  2026-07-03-etl-integration.md  2026-07-03-etl-retrofit-nondriver.md  2026-07-03-fw-standards-rewrite.md  2026-07-04-fw-release-process.md  2026-07-12-sa818-uart-irq-rx.md  2026-07-12-usb-composite-integration.md  2026-07-13-uac2-explicit-feedback.md  2026-07-14-analog-audio-in-rx.md  2026-07-14-analog-audio-out-tx.md  2026-07-16-mcuboot-dfu-secure-bringup.md
docs/superpowers/specs/: 2026-07-01-module-describe-and-typed-command-mapping-design.md  2026-07-02-sa818-full-capability-and-module-platform-design.md  2026-07-03-etl-integration-design.md  2026-07-03-etl-retrofit-nondriver-design.md  2026-07-03-fw-standards-rewrite-design.md  2026-07-04-fw-release-process-design.md  2026-07-12-sa818-uart-irq-rx-design.md  2026-07-12-usb-composite-integration-design.md  2026-07-13-uac2-explicit-feedback-design.md  2026-07-14-analog-audio-in-rx-design.md  2026-07-14-analog-audio-out-tx-design.md  2026-07-16-mcuboot-dfu-secure-bringup-design.md
drivers/: CMakeLists.txt  Kconfig
drivers/audio/: CMakeLists.txt  Kconfig
drivers/audio/analog_audio_in/: CMakeLists.txt  Kconfig  README.md  adc_pcm.c  adc_pcm.h  analog_audio_in.c
drivers/audio/analog_audio_out/: CMakeLists.txt  Kconfig  analog_audio_out.c  dac_pcm.c  dac_pcm.h
drivers/dac/: CMakeLists.txt  Kconfig  wav_dac.cpp
drivers/dac_wav/: CMakeLists.txt  Kconfig
drivers/radio/: CMakeLists.txt  Kconfig
drivers/radio/sa818/: CMakeLists.txt  Kconfig  USB_AUDIO_BRIDGE.md  module_iface.h  sa818.cpp  sa818_at.cpp  sa818_audio.cpp  sa818_audio_stream.cpp  sa818_core.cpp  sa818_driver.cpp  sa818_module.cpp  sa818_priv.h  sa818_shell.cpp
drivers/radio/sa818/sa818/: sa818.h  sa818_at.h  sa818_audio.h  sa818_audio_stream.h
drivers/radio/sa818/src/: sa818_at.cpp  sa818_audio.cpp  sa818_core.cpp  (+4 more)
dts/bindings/: vendor-prefixes.txt
dts/bindings/audio/: oe5xrx,analog-audio-in.yaml  oe5xrx,analog-audio-out.yaml
dts/bindings/dac/: wav-dac.yaml
dts/bindings/radio/: sa,sa818.yaml
include/oe5xrx/: module_iface.h
include/oe5xrx/audio/: analog_audio_in.h  analog_audio_out.h
include/oe5xrx/module/: iface.h
release/: native_sim_static.conf  release-targets.yaml
release/overlays/: band_uhf.overlay  band_vhf.overlay
scripts/: release_smoke.sh
src/: CMakeLists.txt  VariableHelpers.h  VariableRegistry.cpp  VariableRegistry.h  app_config.cpp  app_config.h  commands.cpp  commands.h  config.cpp  config.h  config_storage.cpp  config_storage.h  crc32.h  fixed_string.h  freertos_hook.cpp  main.cpp  ring_buffer.h
src/hal/: CMakeLists.txt  cat24c32.cpp  cat24c32.h  cdc_base.cpp  cdc_base.h  i2c_device.h  interface_uart.h  system_manager.cpp  system_manager.h  system_services.cpp  system_services.h
src/hal/host/: CMakeLists.txt  board.cpp  board.h  cat24c32_sim.cpp  cat24c32_sim.h  cdc_host.cpp  cdc_host.h  cli.cpp  uart.cpp  uart.h
src/hal/stm32/: CMakeLists.txt  board.cpp  board.h  cat24c32_stm32.cpp  cat24c32_stm32.h  freertos_hook.cpp  heap_4.c  syscalls.cpp  timer_stats.cpp  uart.cpp  uart.h
src/hal/stm32/usb/: cdc.cpp  cdc.h  dfu.cpp  dfu.h  handler.cpp  tud.cpp  tud.h  usb_descriptors.cpp
src/shell/: constant.h  history.cpp  history.h  log.cpp  log.h  shell.cpp  shell.h
subsys/module/: CMakeLists.txt  Kconfig
test/: CMakeLists.txt  cat24c32_sim_test.cpp  config_storage_more_tests.cpp  config_storage_test.cpp  fixed_string_test.cpp  history_test.cpp  ring_buffer_test.cpp  stub_stream.h
tests/boot_confirm/: CMakeLists.txt  prj.conf  testcase.yaml
tests/boot_confirm/src/: main.cpp
tests/etl/: CMakeLists.txt  prj.conf  testcase.yaml
tests/etl/src/: main.cpp
tests/sim_shell/: CMakeLists.txt  VERSION  prj.conf  testcase.yaml
tests/sim_shell/pytest/: conftest.py  sa818_simulator.py  test_module_iface.py  test_sa818.py  test_sa818_audio.py  test_sa818_hil.py  test_sa818_simulator_unit.py  test_sa818_sweep.py  test_sa818_test_tone.py  test_sim_shell.py  test_usb_audio_api.py  test_version.py
tests/unit_audio/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit_audio/src/: main.cpp
tests/usb_audio/: CMakeLists.txt  prj.conf  testcase.yaml
tests/usb_audio/pytest/: conftest.py  test_usb_audio.py
zephyr/: module.yml  patches.yml
zephyr/patches/zephyr/: 0001-udc-stm32-isochronous-incomplete-recovery.patch
(+6 files in other folders)
